plugins {
    id 'java'
    id 'idea' // optional (to generate IntelliJ IDEA project files)
}

group 'io.github.mboegers.dop'
version '1.1'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation(platform('org.junit:junit-bom:5.9.2'))
    testImplementation(platform('org.assertj:assertj-bom:3.24.2'))
    testImplementation('org.junit.jupiter:junit-jupiter')
    testImplementation('org.junit.jupiter:junit-jupiter-params')
    testImplementation('org.assertj:assertj-core')
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(20))
    }
}

compileTestJava {
    options.compilerArgs += ['--enable-preview']
}

test {
    jvmArgs('--enable-preview')
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}
